--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.13.5",
-    "express": "^5.2.1"
+    "cloudinary": "^2.9.0",
+    "express": "^5.2.1",
+    "multer": "^2.0.2"
   }
 }
